<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_name">

        <Preference
            android:key="version"
            android:summary="@string/ver_code"
            android:title="@string/version"/>

        <Preference
            android:summary="cantabile31415@gmail.com"
            android:title="@string/usersupport">
            <intent
                android:action="android.intent.action.SENDTO"
                android:data="mailto:cantabile31415@gmail.com" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/staff">

        <Preference
            android:summary="@string/info_override_summary"
            android:title="@string/info_override">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://twitter.com/Override_STDEV" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>