<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.override.cantabile.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RL">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/london_small5"
            android:scaleType="centerCrop"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="#CC34495e"
            android:id="@+id/FL" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:padding="75dp"
                android:src="@drawable/signin"
                android:layout_gravity="center" />
        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:padding="32dp"
        android:layout_below="@id/RL">

        <TextView
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/email_" />


        <EditText
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="20"
            android:id="@+id/email_et_"
            android:layout_below="@+id/email_"/>

        <TextView
            android:paddingTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw"
            android:layout_below="@+id/email_et_"
            android:id="@+id/password" />

        <EditText
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text=""
            android:ems="10"
            android:id="@+id/password_et_"
            android:layout_below="@+id/password"
            android:layout_alignEnd="@+id/login_btn"
            android:layout_alignRight="@+id/login_btn"/>

        <Button
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_btn"
            android:layout_below="@+id/password_et_"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


</RelativeLayout>